--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>MmfApp</title>
-  <base href="/mmf-app/">
+  <base href="/app-mmf/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -10,6 +10,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.51a75df484c2dc38.js" type="module"></script><script src="polyfills.cbcb29f35b1aaee4.js" type="module"></script><script src="main.e0a9fbf9e8914938.js" type="module"></script>
+<script src="runtime.2979ca759b965a1a.js" type="module"></script><script src="polyfills.bd08b8a6c1e99076.js" type="module"></script><script src="main.42770ff9b5628bbf.js" type="module"></script>
 
 </body></html>
